Seperated glide, and camera/gallery code from each other. They can now be found in seperate classes. This makes it easier to debug issues in both classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".GameActivity" />
         <activity android:name=".HighScores" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".profile"></activity>
+        <activity android:name=".profile" />
+        <activity android:name=".AvatarPreview"></activity>
     </application>
 
 </manifest>
